# Moodler

./: .gitignore  Audio.hs  Check.hs  CodeGen.hs  Command.hs  ContainerTree.hs  Draw.hs  HOWTO.md  HandleEvent.hs  KeyTracker.hs  Makefile  Module.hs  Moodler.cabal  Multi.hs  NOTES.md  OSCRecv.hs  Options.hs  README.md  Save.hs  Setup.lhs  TODO.md  Text.hs  UIElement.hs  UISupport.hs  UiLib.hs  UiLibWrapper.hs  Utils.hs  World.hs  audio.c  moodler_lib.h  ui.hs
MockModular/: mock.py
Moodler/: .gitignore  Bridge3.hs  LICENSE  Makefile  Moodler.cabal  README.md  TODO.md  audio.c  audio_sin.c  audio_sin.h  audio_square.c  audio_square.h  band_limited.c  band_limited.h  cabal.config  cbridge.c  delay_int_line.c  delay_int_line.h  delay_line.c  delay_line.h  export_panels.applescript  export_panels.sh  hilbert.c  hilbert.h  ladder.c  ladder.h  makemidi.py  moodler_lib.c  moodler_lib.h  moodlerrc.hs  progression.c  progression.h  quantise.c  quantise.h  quantise_scale.c  quantise_scale.h  reverb.c  reverb.h  upgrade1.vim
Moodler/Tools/: CParser.hs
Moodler/doc/: intro.html  intro.md
Moodler/modules/: accumulate8.msl  adsr.msl  adsr.spec  alias.spec  allpass.msl  allpass.spec  and.spec  arpeg.msl  arpeg.spec  arpeggiator.msl  arpeggiator.spec  audio_id.msl  audio_id.spec  audio_saw.msl  audio_sin.msl  audio_sin.spec  audio_square.msl  audio_square.spec  audio_triangle.msl  audio_triangle.spec  bit_and.spec  bit_not.msl  bit_not.spec  bit_or.spec  bit_xor.msl  bounce.msl  bounce.spec  butterbp.msl  butterbp.spec  butterhp.msl  butterhp.spec  butterlp.spec  cc.msl  clock.msl  complex_add.msl  complex_mult.msl  complex_osc.msl  cos.msl  cos.spec  cosh.spec  (+113 more)
Moodler/panels.graffle/: data.plist  image10.tiff  image16.tiff
Moodler/saves/: Untitled.hs  dirty.hs  fanfare.hs  logic_test.hs  nice1.hs  panel_fanfare.hs  phaser_test.hs  plopface.hs  startup.hs  temp.hs  test.hs  test1.hs  test2.hs  test3.hs  test_3dda.hs  test_4part.hs  test_arpeggiator.hs  test_arpeggio.hs  test_arpeggio2.hs  test_bash.hs  test_bits.hs  test_bounce.hs  test_cackle.hs  test_chorus.hs  test_crush.hs  test_delay.hs  test_demo1.hs  test_demo2.hs  test_demo3.hs  test_demo_bitwise.hs  test_demo_full_synth.hs  test_distantdrums.hs  test_divider.hs  test_drum.hs  test_fanfare.hs  test_filter.hs  test_floaty.hs  test_full_synth.hs  test_glass.hs  test_halloween.hs  (+37 more)
Moodler/scripts/: 3dda.hs  addknob.fails.hs  addknob.hs  addslider.hs  adsr.hs  alert.hs  alias.hs  allpass.hs  and.hs  arpeggiator.hs  audio_id.hs  audio_saw.hs  audio_sin.hs  audio_square.hs  audio_triangle.hs  audio_warp.hs  bandpass.hs  bass.hs  bass_drum.hs  bend.hs  bindings.hs  bit_and.hs  bit_not.hs  bit_or.hs  bit_xor.hs  bounce.hs  breakknob.hs  butterbp.hs  butterhp.hs  butterlp.hs  chaos.hs  chord.hs  chorus.hs  chorus2.hs  container.hs  cos.hs  cosh.hs  crush.hs  dda.hs  decay.hs  (+164 more)
Moodler/src/: Audio.hs  Box.hs  Bridge.hs  CGen.hs  CLens.hs  Cable.hs  Check.hs  CodeBuild.hs  CodeGen.hs  Command.hs  Comms.hs  ContainerTree.hs  Draw.hs  HandleDraggingCable.hs  HandleDraggingKnob.hs  HandleDraggingRegion.hs  HandleDraggingRoot.hs  HandleDraggingSelection.hs  HandleEvent.hs  HandleListen.hs  KeyMatcher.hs  KeyStrokes.hs  KeyTracker.hs  Module.hs  Moodler.hs  MoodlerSymbols.hs  Multi.hs  Music.hs  NanoHaskell.hs  OSCRecv.hs  ParsePragma.hs  ParseUIOpts.hs  Parser.hs  Save.hs  Server.hs  ServerState.hs  StandardSynth.hs  Synth.hs  Text.hs  TopologicalSort.hs  (+9 more)
MoodlerLib/: LICENSE  MoodlerLib.cabal  cabal.config
MoodlerLib/src/Sound/MoodlerLib/: Quantise.hs  Symbols.hs  UiLib.hs  UiLibElement.hs
Oscilloscope/: Makefile  audio_socket.c  audio_socket.h  main.c  oscilloscope.c  oscilloscope.h
modules/: adsr.spec  allpass.spec  and.spec  audio_id.spec  audio_saw.spec  audio_sin.spec  audio_square.spec  audio_triangle.spec  bounce.spec  butterbp.spec  butterhp.spec  butterlp.spec  cos.spec  cosh.spec  dda.spec  delay.spec  divider.spec  echo.spec  exp.spec  (+33 more)
(+141 files in other folders)
