name:               Moodler
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.8

executable moodler
  hs-source-dirs:   src
  main-is:          moodler.hs
  ghc-options:      -O -threaded
  build-depends:    base, language-c, lens, unix, mtl,
                    pretty, process, hashable, containers,
                    either, bytestring, array, hosc >= 0.14, syb,
                    directory

executable ui
  hs-source-dirs:   src
  main-is:          ui.hs
  ghc-options:      -O -threaded
  build-depends:    base, gloss, containers, lens, mtl, bmp, hint,
                    hosc >= 0.14, unix, free, either, filepath
