name:               Moodler
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.8
category:           Sound
maintainer:         dpiponi@gmail.com
synopsis:           A modular synthesiser
description:        A modular synthesiser
license:            BSD2
license-file:       LICENSE
cabal-version:    >= 1.10

source-repository head
  type:               git
  location:           https://github.com/dpiponi/Moodler

executable moodler
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          moodler.hs
  ghc-options:      -threaded -Wall
  build-depends:    base >= 4 && < 5, lens, unix, mtl,
                    pretty, process, hashable, containers,
                    either, bytestring, array, hosc >= 0.14, syb,
                    directory, temporary, cpphs, optparse-applicative,
                    mmorph, transformers, filepath, uniplate,
                    language-c

executable ui
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          ui.hs
  ghc-options:      -threaded -Wall
  build-depends:    base >= 4 && < 5, gloss == 1.9.2.1, containers, lens, mtl,
                    bmp, hint, hosc >= 0.14, unix, free, either, filepath,
                    mmorph, gloss-juicy, JuicyPixels, MoodlerLib, directory

executable bridge
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Bridge.hs
  ghc-options:      -threaded -Wall
  build-depends:    base >= 4 && < 5, PortMidi, hosc >= 0.14
